<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cooked_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_Recipes"
        android:name="com.example.cooked_app.ui.recipes.RecipesFragment"
        android:label="@string/title_Recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_Courses"
        android:name="com.example.cooked_app.ui.courses.CoursesFragment"
        android:label="@string/title_Courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/navigation_Account"
        android:name="com.example.cooked_app.ui.account.AccountFragment"
        android:label="@string/title_Account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_Settings"
        android:name="com.example.cooked_app.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />
</navigation>