<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CBA"
    tools:context=".Activities.AddRecipeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:autofillHints="recipe name"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:maxLines="10"
            android:layout_marginBottom="20dp"
            android:hint="@string/recipe_name"
            android:padding="20dp"
            android:textStyle="bold"
            android:scrollbars="vertical"
            android:background="@drawable/edit_text_border"/>

        <TextView
            android:id="@+id/recipe_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="recipe name"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:layout_marginBottom="20dp"
            android:hint="@string/recipe_course"
            android:textStyle="bold"
            android:padding="20dp"
            android:background="@drawable/edit_text_border"/>

        <TextView
            android:id="@+id/recipe_cuisine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:autofillHints="recipe name"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:layout_marginBottom="20dp"
            android:hint="@string/recipe_cuisine"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/edit_text_border"/>

        <TextView
            android:id="@+id/recipe_ingredients"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="100"
            android:layout_gravity="fill_vertical"
            android:autofillHints="recipe ingredients"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:hint="@string/show_ingredients"
            android:padding="20dp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:background="@drawable/edit_text_border"/>

        <TextView
            android:id="@+id/recipe_steps"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="100"
            android:layout_gravity="fill_vertical"
            android:autofillHints="recipe steps"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:hint="@string/show_steps"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/edit_text_border"/>

        <TextView
            android:id="@+id/recipe_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:autofillHints="recipe category"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:hint="@string/show_category"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/edit_text_border"/>

        <TextView
            android:id="@+id/recipe_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="100"
            android:layout_gravity="fill_vertical"
            android:autofillHints="recipe description"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:hint="@string/show_description"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/edit_text_border"/>

    </LinearLayout>
</ScrollView>
